# libcomm

./: .gitignore  comms.xml
cpp/: CMakeLists.txt  Makefile
cpp/Templates/: CommunicationDefinitions.Template.cpp  CommunicationDefinitions.Template.h  CommunicationDefinitions.h  CommunicationDefinitionsTemplate.h  CommunicationDefinitionsTemplate.txt  InterfaceTemplate.h  InterfaceTemplate.txt  Packet.Interface.Template.txt  Template.h  Template.txt
cpp/autogenerated/include/: CommunicationDefinitions.h  Dashboard.h  DashboardInterface.h  Data_Server.h  Data_ServerInterface.h  Debug_Message.h  Debug_MessageInterface.h  FieldPosition.h  FieldPositionInterface.h  Field_Position.h  Field_PositionInterface.h  Hardware.h  HardwareInterface.h  Identifier.h  IdentifierInterface.h  Joystick.h  JoystickInterface.h  MotorInfo.h  MotorInfoInterface.h  Motor_Info.h  Motor_InfoInterface.h  NavigationLine.h  NavigationLineInterface.h  Navigation_Line.h  Navigation_LineInterface.h  Navigation_Obstacle.h  Navigation_ObstacleInterface.h  Navigation_Obstacles.h  Navigation_ObstaclesInterface.h  Navigation_Path.h  Navigation_PathInterface.h  Navigation_Point.h  Navigation_PointInterface.h  Navigation_State.h  Obstacle.h  (+24 more)
cpp/include/: BitArray8.h  BitArray8Interface.h  CommunicationDefinitions.h  ImageSerializer.h  RESTClient.h  RESTPacket.h  TCPClient.h  Timer.h  Types.hpp
cpp/src/: CommunicationDefinitions.cpp  RESTClient.cpp  TCPClient.cpp  Test.cpp  test.cpp
cpp/templates/: CommunicationDefinitions.Template.cpp  CommunicationDefinitions.Template.h  Packet.Interface.Template.txt
(+211 files in other folders)
